--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   <link rel="stylesheet" href="main.css">
-  <title>HTML Portfolio</title>
+  <title>"HTML Portfolio"</title>
 </head>
+
 <body>
 
-  Welcome to the HTML Portfolio Project
+  <div class="header">
+    <h1>"Iradukunda Ange Evariste"</h1>
+    <h2>"Software Developer"</h2>
+  </div>
+
+  <div class="tagline">
+    <div class="content-wrapper">
+      <h3>"A bit more about me"</h3>
+      <p>"Hey I am Iradukunda, I work for my self" <a target="_blank" href="https://www.legiteyes.com">Code School</a> and I love writing Code!</p>
+    </div>
+  </div>
+
+
+  <div class="skills">
+    <div class="content-wrapper">
+      <h3>Skills</h3>
+      <p>Here are some of the technologies I enjoy writing and learning day-to-day:</p>
+      <ul>
+        <li>HTML &amp; CSS</li>
+        <li>Node.js</li>
+        <li>c++</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="contact">
+    <div class="content-wrapper">
+      <h3>How to contact me</h3>
+      <p>The easiest way to contact me is via email: <a target="_blank" href="https://www.legiteyes.com">@GETDEEP</a></p>
+    </div>
+  </div>
 
 </body>
+
 </html>
